:sparkles:[sparkle]: add self-withdrawal yn validation